fixed footer overlapping content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@ body {
     line-height: 34px;
     color: #777;
     background: url("../images/concrete_seamless.png");
+    padding-bottom: 120px;
   }
 
 .nav {
